src/test/ui/const-generics/issues/issue-67739.min.stderr
error: generic parameters must not be used inside of non trivial constant values
  --> $DIR/issue-67739.rs:12:30
   |
LL |         [0u8; mem::size_of::<Self::Associated>()];
   |                              ^^^^^^^^^^^^^^^^ non-trivial anonymous constants must not depend on the parameter `Self`
   |
   = help: it is currently only allowed to use either `Self` or `{ Self }` as generic constants

error: aborting due to previous error

